[package]
name = "tx-mon"
version = "0.1.0"
authors = ["Jared Leach <jared@prototypic.al>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = {version = "0.29.0", features=["event-stream"]}
color-eyre = "0.6.5"
ratatui = {version = "0.29.0", features = ["crossterm"] }
tokio = { version = "1.46.1", features = ["full"] }
